   - Own tokenizer.
   - Use SYMBOL for storing FUNC name.
   - Merge equal Object and WeakObject on compare.
 * GP
   * Static types.
     + Generate ADF.
     + Mutate ADF.
     + Crossover ADF.
   - Add scripting for individual testing and comparsion.
   - Support for galapagos (https://github.com/brunoro/galapagos) visualisation tool.

Now
 * GP
   - Split ADF.
   - Show updated criteria.

Version 0.0.7 2014-02-09
 * GP
   - Change output format.
   - Rewrite criteria.
   - Reduce optimization's steps.
   - Multithread GA.

Version 0.0.6 2013-07-19
 * VM
  - Speep-up by move-constructor of LIST.
  - Fix the free chain's consistency.
  - Cache Program as Object for speed-up.
  - Get fill statistics about the heap.
 * GP
  - Add type optimization.
  - Move functions to base GP folder.
  - Remove ADF from generated objects.
  - Optimize %0 as returning LIST.
  - Optimize IF with TRUE branch equal to FALSE branch.
  - Add configurable MUTATUION-RATE-PERCENT parameter.
  - Make random SEED configurable.

Version 0.0.5 2012-09-05
 - Support for C++0x (GCC 4.5.3)
 - Add optimization of programs.
 * VM
   - Add comparator for WeakObject and Object to use with STL containers.
   - Speed-up by using pregenerated parameterless objects.
 * GP
   - Add optimization.
   - Optimization of wrong code returns ERROR.
   - Show parents of winner individual.
   - Add IF_TOTAL criteria (count of IFs in program).
   - Store Program instead its text (good speedup).
   - Add STATIC_WORLD_ACCESS and STATIC_MEMORY_ACCESS for check if the program access to memory and world.
   - Add NEG_ERROR_TOTAL criteria (count of ERRORs in program after optimization).
   - Optimize individual on load.
   * Static types
     + Remove types in file.

Version 0.0.4 2012-01-30
 - Support for win32.
 - Relicense as MIT.
 * VM
   - Fix function calls with ERROR arguments.
   - Make set of objects local for environment.
   - Fix Object's debugging for Win32.
 * GP
   * Static types