@@ -19,6 +19,7 @@ Now
  * GP
    - Split ADF.
    - Show updated criteria.
+   - Add elite individual to the parent pool.
 
 Version 0.0.7 2014-02-09
  * GP
